--- a/src/main/resources/public/src/scss/theme/default/_tag.scss
+++ b/src/main/resources/public/src/scss/theme/default/_tag.scss
@@ -6,51 +6,38 @@
  * @version 1.0
  */
 // tag 동작 이벤트
-@keyframes tags--bump {
+@include keyframe(tags--bump) {
   30% {
     transform: scale(1.2);
   }
 }
-@keyframes rotateLoader {
+@include keyframe(rotateLoader) {
   to {
     transform: rotate(1turn);
   }
 }
 
 .tagify {
-  min-height: 2.5rem; // 40px
-  padding-left: 0.3125rem; // 5px
   display: flex;
+  min-height: 2.5rem; // 40px
   align-items: flex-start;
   flex-wrap: wrap;
+  position: relative;
+  padding: 0 0 0 0.3125rem; // 0 0 0 5px
   border: $tagify-border;
-  padding: 0;
   line-height: 1.1;
   cursor: text;
   outline: 0;
-  position: relative;
   transition: 0.1s;
+  --tag-hide-transition: 0.3s;
 
   &:hover {
     border: $tagify-hover-border;
   }
 
-  &:not(.tagify--mix) {
-    .tagify__input  {
-      * {
-        display: inline;
-        white-space: nowrap;
-      }
-
-      br {
-        display: none;
-      }
-    }
-  }
-
   &.tagify--focus {
-    transition: 0s;
     border: $tagify-focus-border;
+    transition: 0s;
   }
 
   &[readonly] {
@@ -67,9 +54,9 @@
     }
 
     .tagify__tag > div {
+      padding: 0.25rem 0.5rem; // 4px, 8px
       color: $tagify-read-font-color;
       pointer-events: none;
-      padding: 0.25rem 0.5rem; // 4px, 8px
 
       &::before {
         background-color: $tagify-read-bg-color;
@@ -79,6 +66,18 @@
     }
   }
 
+  &:not(.tagify--mix) {
+    .tagify__input  {
+      * {
+        display: inline;
+        white-space: nowrap;
+      }
+
+      br {
+        display: none;
+      }
+    }
+  }
   + input,
   + textarea {
     display: none !important;
@@ -93,11 +92,11 @@
     &::after {
       width: 0.75rem; // 12px
       height: 0.75rem; // 12px
+      margin: -0.125rem 0 -0.125rem 0.5rem; // -2px, 0, -2px, 8px
       border: $tagify-load-border;
       border-color: $tagify-load-border-color;
       border-radius: 50%;
-      margin: -0.125rem 0 -0.125rem 0.5rem; // -2px, 0, -2px, 8px
-      content: "";
+      content: '';
       vertical-align: middle;
       opacity: 1;
       animation: rotateLoader 0.4s infinite linear;
@@ -111,54 +110,54 @@
 .tagify__tag {
   display: inline-flex;
   align-items: center;
-  margin: 0.3125rem 0 0.3125rem 0.3125rem; //5px 0 5px 5px
   position: relative;
+  margin: 0.3125rem 0 0.3125rem 0.3125rem; //5px 0 5px 5px
   z-index: 1;
   outline: 0;
   cursor: default;
   transition: 0.13s ease-out;
 
   > div {
-    vertical-align: top;
-    box-sizing: border-box;
     max-width: 100%;
     padding: 0.25rem 0.5rem; // 4px, 8px
+    border-radius: 0.188rem; // 3px
+    vertical-align: top;
+    box-sizing: border-box;
     color: black;
     line-height: inherit;
-    border-radius: 0.188rem; // 3px
     -webkit-user-select: none;
     user-select: none;
     transition: 0.13s ease-out;
 
     > * {
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
       display: inline-block;
       vertical-align: top;
       min-width: 1ch;
       max-width: max-content;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
       transition: 0.8s ease, 0.1s color;
     }
 
     > [contenteditable] {
+      max-width: 21.88rem; // 350px
+      margin: -0.125rem; // -2px
+      padding: 0.125rem; // 2px
       outline: 0;
       -webkit-user-select: text;
       user-select: text;
       cursor: text;
-      margin: -0.125rem; // -2px
-      padding: 0.125rem; // 2px
-      max-width: 21.88rem // 350px
     }
 
     &::before {
-      content: "";
+      content: '';
       position: absolute;
-      border-radius: inherit;
-      left: 0;
       top: 0;
       right: 0;
       bottom: 0;
+      left: 0;
+      border-radius: inherit;
       z-index: -1;
       pointer-events: none;
       transition: 120ms ease;
@@ -172,7 +171,7 @@
     right: -0.125rem; // -2px
     bottom: -0.125rem; // -2px
     left: -0.125rem; // -2px
-    box-shadow: 0 0 0 1.1em #d3e2e2 inset;
+    box-shadow: 0 0 0 1.125rem #d3e2e2 inset;
   }
 
   &--loading {
@@ -183,16 +182,16 @@
     }
 
     &::after {
-      content: "";
+      content: '';
       vertical-align: middle;
-      opacity: 1;
       width: 0.688rem; // 11px
       height: 0.688rem; // 11px
+      margin: 0 0.5rem 0 -0.063rem; // 8px, -1px
       border: $tagify-load-border;
       border-color: $tagify-load-border-color;
       border-radius: 50%;
+      opacity: 1;
       animation: rotateLoader 0.4s infinite linear;
-      margin: 0 0.5rem 0 -0.063rem; // 8px, -1px
     }
   }
 
@@ -210,7 +209,7 @@
     margin-right: 0;
     opacity: 0;
     transform: scale(0);
-    transition: 0.3s;
+    transition: var(--tag-hide-transition);
     pointer-events: none;
   }
 
@@ -227,7 +226,7 @@
       }
 
       &::before {
-        box-shadow: 0 0 0 1.125em rgba(211, 148, 148, 0.5) inset !important;
+        box-shadow: 0 0 0 1.125rem rgba(211, 148, 148, 0.5) inset !important;
         transition: 0.2s;
       }
     }
@@ -263,23 +262,22 @@
 }
 
 .tagify__tag__removeBtn {
-  width: 0.875rem; // 14px
-  height: 0.875rem; // 14px
-  margin-right: 0.25rem; // 4.66667px
-  margin-left: -0.25rem; // 4.66667px
-  transition: 0.2s ease-out;
-  order: 5;
   display: inline-flex;
   align-items: center;
   justify-content: center;
+  width: 0.875rem; // 14px
+  height: 0.875rem; // 14px
+  margin: 0 0.25rem; // 0 4.66667px
+  transition: 0.2s ease-out;
   border-radius: 3.125rem; // 50px
+  order: 5;
   cursor: pointer;
   font: 0.875rem Serif; // 14px
-  background: 0 0;
   color: black;
+  background: 0 0;
 
   &::after {
-    content: "\00D7";
+    content: '\00D7';
   }
 
   &:hover {
@@ -330,31 +328,31 @@
   }
 
   &::before {
-    width: 0;
-    height: 1em;
-    top: 0;
-    bottom: 0;
     display: inline-block;
     position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 0;
+    height: 1em;
+    margin: auto 0;
     content: attr(data-placeholder);
     line-height: 1em;
-    margin: auto 0;
     z-index: 1;
     color: black;
+    opacity: 0;
     white-space: nowrap;
     pointer-events: none;
-    opacity: 0;
   }
 
 
   &::after {
     content: attr(data-suggest);
     display: inline-block;
+    max-width: 100px;
     white-space: pre;
     color: black;
     opacity: 0.3;
     pointer-events: none;
-    max-width: 100px;
   }
 
   .tagify__tag {
@@ -369,31 +367,31 @@
 
 @supports (-moz-appearance:none) {
   .tagify__input:empty {
-    display: flex
+    display: flex;
   }
 }
 
 @supports (-moz-appearance:none) {
   .tagify__input:focus::before {
-    display: none
+    display: none;
   }
 }
 
 @media all and (-ms-high-contrast: none),
 (-ms-high-contrast: active) {
   .tagify__input:focus::before {
-    display: none
+    display: none;
   }
 }
 
 @supports (-ms-ime-align:auto) {
   .tagify__input:focus::before {
-    display: none
+    display: none;
   }
 }
 @supports (-moz-appearance:none) {
   .tagify__input:focus:empty::before {
-    display: inline-block
+    display: inline-block;
   }
 }
 
@@ -401,14 +399,14 @@
   line-height: 1.7;
 
   .tagify__input {
-    padding: 5px;
-    margin: 0;
     width: 100%;
     height: 100%;
+    padding: 5px;
+    margin: 0;
     line-height: inherit;
     &::before {
-      height: auto;
       position: static;
+      height: auto;
       line-height: inherit;
     }
     &::after {
@@ -420,14 +418,14 @@
 .tagify--select {
   &::after {
     content: '>';
-    opacity: 0.5;
     position: absolute;
     top: 50%;
     right: 0;
     bottom: 0;
+    height: 8px;
+    opacity: 0.5;
     font: 16px monospace;
     line-height: 8px;
-    height: 8px;
     pointer-events: none;
     transform: translate(-150%, -50%) scaleX(1.2) rotate(90deg);
     transition: 0.2s ease-in-out;
@@ -482,10 +480,10 @@
 
   &__wrapper {
     max-height: 300px;
-    overflow: hidden;
-    background: white;
     border: 1px solid #3595f6;
     border-top-width: 0;
+    overflow: hidden;
+    background: white;
     box-shadow: 0 2px 4px -2px rgba(0, 0, 0, 0.2);
     transition: 0.25s cubic-bezier(0, 1, 0.5, 1);
 
@@ -506,12 +504,12 @@
   }
 
   &__item {
+    position: relative;
     box-sizing: inherit;
     padding: 0.3em 0.5em;
     margin: 1px;
-    cursor: pointer;
     border-radius: 2px;
-    position: relative;
+    cursor: pointer;
     outline: 0;
 
     &:active {
@@ -519,8 +517,8 @@
     }
 
     &--active {
-      background: #3595f6;
       color: white;
+      background: #3595f6;
     }
   }
 }
