--- a/src/main/resources/public/assets/css/formRefactoring.css
+++ b/src/main/resources/public/assets/css/formRefactoring.css
@@ -567,12 +567,12 @@ input, button, select, optgroup, textarea {
   font-weight: 500;
   color: #ffffff;
   background-color: #0098FF;
-  padding: 0 1.25rem;
+  padding: 0 0.75rem;
   z-index: 100;
 }
 .form-header .name {
   font-size: 1.125rem;
-  padding: 0 0.9375rem;
+  padding: 0 0.75rem 0 1.25rem;
 }
 .form-header .separator {
   width: 0.063rem;
@@ -2064,8 +2064,8 @@ button.ghost-line:disabled .icon {
 }
 .btn-header .icon-save {
   display: inline-block;
-  width: 1.25rem;
-  height: 1.25rem;
+  width: 1.5rem;
+  height: 1.5rem;
   -webkit-mask-image: url("../media/icons/formRefactoring/topmenu/icon_save.svg");
   mask-image: url("../media/icons/formRefactoring/topmenu/icon_save.svg");
   -webkit-mask-repeat: no-repeat;
@@ -2076,8 +2076,8 @@ button.ghost-line:disabled .icon {
 }
 .btn-header .icon-save-as {
   display: inline-block;
-  width: 1.25rem;
-  height: 1.25rem;
+  width: 1.5rem;
+  height: 1.5rem;
   -webkit-mask-image: url("../media/icons/formRefactoring/topmenu/icon_save_as.svg");
   mask-image: url("../media/icons/formRefactoring/topmenu/icon_save_as.svg");
   -webkit-mask-repeat: no-repeat;
@@ -2088,8 +2088,8 @@ button.ghost-line:disabled .icon {
 }
 .btn-header .icon-undo {
   display: inline-block;
-  width: 1.25rem;
-  height: 1.25rem;
+  width: 1.5rem;
+  height: 1.5rem;
   -webkit-mask-image: url("../media/icons/formRefactoring/topmenu/icon_undo.svg");
   mask-image: url("../media/icons/formRefactoring/topmenu/icon_undo.svg");
   -webkit-mask-repeat: no-repeat;
@@ -2100,8 +2100,8 @@ button.ghost-line:disabled .icon {
 }
 .btn-header .icon-redo {
   display: inline-block;
-  width: 1.25rem;
-  height: 1.25rem;
+  width: 1.5rem;
+  height: 1.5rem;
   -webkit-mask-image: url("../media/icons/formRefactoring/topmenu/icon_redo.svg");
   mask-image: url("../media/icons/formRefactoring/topmenu/icon_redo.svg");
   -webkit-mask-repeat: no-repeat;
@@ -2112,10 +2112,22 @@ button.ghost-line:disabled .icon {
 }
 .btn-header .icon-preview {
   display: inline-block;
-  width: 1.25rem;
-  height: 1.25rem;
+  width: 1.5rem;
+  height: 1.5rem;
   -webkit-mask-image: url("../media/icons/formRefactoring/topmenu/icon_preview.svg");
   mask-image: url("../media/icons/formRefactoring/topmenu/icon_preview.svg");
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  -webkit-mask-position: center;
+  mask-position: center;
+  background: #ffffff;
+}
+.btn-header .icon-dropdown {
+  display: inline-block;
+  width: 1.5rem;
+  height: 1.5rem;
+  -webkit-mask-image: url("../media/icons/formRefactoring/topmenu/icon_dropdown.svg");
+  mask-image: url("../media/icons/formRefactoring/topmenu/icon_dropdown.svg");
   -webkit-mask-repeat: no-repeat;
   mask-repeat: no-repeat;
   -webkit-mask-position: center;
