--- a/src/main/resources/public/src/scss/formRefactoring/_buttons.scss
+++ b/src/main/resources/public/src/scss/formRefactoring/_buttons.scss
@@ -21,23 +21,27 @@
 
   .icon-save {
     display: inline-block;
-    @include maskImage('#{$icon-folder-path}formRefactoring/topmenu/icon_save.svg', 1.25rem, 1.25rem, no-repeat, center, null, $white); // 20px 20px
+    @include maskImage('#{$icon-folder-path}formRefactoring/topmenu/icon_save.svg', 1.5rem, 1.5rem, no-repeat, center, null, $white); // 24px 24px
   }
   .icon-save-as {
     display: inline-block;
-    @include maskImage('#{$icon-folder-path}formRefactoring/topmenu/icon_save_as.svg', 1.25rem, 1.25rem, no-repeat, center, null, $white);// 20px 20px
+    @include maskImage('#{$icon-folder-path}formRefactoring/topmenu/icon_save_as.svg', 1.5rem, 1.5rem, no-repeat, center, null, $white);// 24px 24px
   }
   .icon-undo {
     display: inline-block;
-    @include maskImage('#{$icon-folder-path}formRefactoring/topmenu/icon_undo.svg', 1.25rem, 1.25rem, no-repeat, center, null, $white);// 20px 20px
+    @include maskImage('#{$icon-folder-path}formRefactoring/topmenu/icon_undo.svg', 1.5rem, 1.5rem, no-repeat, center, null, $white);// 24px 24px
   }
   .icon-redo {
     display: inline-block;
-    @include maskImage('#{$icon-folder-path}formRefactoring/topmenu/icon_redo.svg', 1.25rem, 1.25rem, no-repeat, center, null, $white);// 20px 20px
+    @include maskImage('#{$icon-folder-path}formRefactoring/topmenu/icon_redo.svg', 1.5rem, 1.5rem, no-repeat, center, null, $white);// 24px 24px
   }
   .icon-preview {
     display: inline-block;
-    @include maskImage('#{$icon-folder-path}formRefactoring/topmenu/icon_preview.svg', 1.25rem, 1.25rem, no-repeat, center, null, $white);// 20px 20px
+    @include maskImage('#{$icon-folder-path}formRefactoring/topmenu/icon_preview.svg', 1.5rem, 1.5rem, no-repeat, center, null, $white);// 24px 24px
+  }
+  .icon-dropdown {
+    display: inline-block;
+    @include maskImage('#{$icon-folder-path}formRefactoring/topmenu/icon_dropdown.svg', 1.5rem, 1.5rem, no-repeat, center, null, $white);// 24px 24px
   }
 }
 
