#10396 [CMDB] CI Class 추가시 부모의 attribute 목록을 가져와 추가되는 현상 1. 신규 버튼 클릭시 오픈된 팝업의 체크 수정

--- a/src/main/resources/public/template/cmdb/class/classEdit.html
+++ b/src/main/resources/public/template/cmdb/class/classEdit.html
@@ -184,6 +184,7 @@
             while (attributeList.hasChildNodes()) {
                 attributeList.removeChild(attributeList.firstChild);
             }
+            classAttributeMap.clear();
 
             document.getElementById('btnUpdate').style.display = 'none';
             document.getElementById('btnDelete').style.display = 'none';
@@ -319,7 +320,7 @@
         }
 
         function openClassAttributeListModal() {
-            classAttributeListModal = new modal({
+            const classAttributeListModal = new modal({
                 title: i18n.msg('cmdb.class.label.attributeList'),
                 body: createModalContent(),
                 classes: 'cmdb-class-attribute-modal',
