--- a/src/main/resources/public/src/scss/formRefactoring/_tooltip.scss
+++ b/src/main/resources/public/src/scss/formRefactoring/_tooltip.scss
@@ -1,5 +1,33 @@
 @import '../template/_tooltip.scss';
 
+// header
+.header-tooltip {
+  .tooltip-contents-reverse {
+    min-width: $tooltip-header-contents-width;
+    visibility: hidden;
+    background-color: map-get($blues, "hover");
+    color: $white;
+    text-align: center;
+    font-size: $tooltip-header-contents-size;
+    border-radius: $tooltip-header-contents-border;
+    padding: $tooltip-header-contents-padding;
+    margin: $tooltip-header-contents-margin;
+    position: absolute;
+    z-index: $z-index-tooltip;
+    span {
+      color: $white;
+      font-weight: $font-weight-medium;
+    }
+  }
+
+  &:hover {
+    .tooltip-contents {
+      visibility: visible;
+      @include animation (0s, 0.3s, fadeIn, ease-out);
+    }
+  }
+}
+
 // clipboard - 복사 용도
 .clipboard-tooltip {
   position: relative;
