--- a/src/main/resources/public/src/scss/formRefactoring/_variables.scss
+++ b/src/main/resources/public/src/scss/formRefactoring/_variables.scss
@@ -5,7 +5,7 @@
 //////////////////////////// layout ////////////////////////////
 // header
 $layout-header-height:                             3.125rem; // 50px
-$layout-header-font-size:                          $font-size-base;
+$layout-header-font-size:                          $font-size-base * 1.125; // 18px
 $layout-header-font-color:                         $white;
 $layout-header-font-weight:                        $font-weight-medium;
 $layout-header-bg-color:                           $blue;
@@ -24,7 +24,7 @@ $layout-properties-panel-header-font-weight:       $font-weight-medium;
 $layout-properties-panel-header-bg-color:          map-get($blues, "hover");
 
 // properties panel
-$layout-properties-panel-width:                    23.13rem; // 370px
+$layout-properties-panel-width:                    20rem; // 320px
 $layout-properties-panel-bg-color:                 $white;
 $layout-properties-panel-border:                   0.0625rem solid map-get($grays, "line"); // 1px
 $layout-properties-panel-box-shadow:               -0.0625rem 0.9375rem 0.4375rem 0 rgba(204, 206, 209, 0.15);// -1px 15px 7px 0px $pressed-gray, 불투명도 15%;
